--- a/Config/templates/Website/contact.html
+++ b/Config/templates/Website/contact.html
@@ -1,4 +1,4 @@
-{% extends 'Website/websitebase.html' %}
+{% extends 'Website/base.html' %}
 {% load static %}
 {% block content %}
 <!-- Contact Start -->
@@ -8,30 +8,30 @@
             <div class="col-lg-5 mb-5 mb-lg-0">
                 <div class="bg-light d-flex flex-column justify-content-center px-5" style="height: 450px;">
                     <div class="d-flex align-items-center mb-5">
-                        <div class="btn-icon bg-primary mr-4">
+                        <div class="btn-icon badge badge-dark mr-4">
                             <i class="fa fa-2x fa-map-marker-alt text-white"></i>
                         </div>
                         <div class="mt-n1">
                             <h4>Our Location</h4>
-                            <p class="m-0">123 Street, New York, USA</p>
+                            <p class="m-0">Road 8, Sector 6, Uttara Dhaka</p>
                         </div>
                     </div>
                     <div class="d-flex align-items-center mb-5">
-                        <div class="btn-icon bg-secondary mr-4">
+                        <div class="btn-icon badge badge-info mr-4">
                             <i class="fa fa-2x fa-phone-alt text-white"></i>
                         </div>
                         <div class="mt-n1">
                             <h4>Call Us</h4>
-                            <p class="m-0">+012 345 6789</p>
+                            <p class="m-0">017232***3</p>
                         </div>
                     </div>
                     <div class="d-flex align-items-center">
-                        <div class="btn-icon bg-warning mr-4">
+                        <div class="btn-icon badge badge-primary mr-4">
                             <i class="fa fa-2x fa-envelope text-white"></i>
                         </div>
                         <div class="mt-n1">
                             <h4>Email Us</h4>
-                            <p class="m-0">info@example.com</p>
+                            <p class="m-0">spiritschool@gmail.com</p>
                         </div>
                     </div>
                 </div>
