--- a/Config/static/website/assets/css/style.css
+++ b/Config/static/website/assets/css/style.css
@@ -2371,15 +2371,41 @@ fieldset:disabled a.btn {
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #2878EB;
-  border-color: #2878EB;
+  --c: #1095c1; /* the color */
+  --b: .1em;    /* border length*/
+  --d: 20px;    /* the cube depth */
+  
+  --_s: calc(var(--d) + var(--b));
+  color: var(--c);
+  border: solid #0000;
+  border-width: var(--b) var(--b) var(--_s) var(--_s);
+  background:
+    conic-gradient(at left var(--d)  bottom var(--d),
+      #0000 90deg, rgb(255 255 255 /0.3) 0 225deg,rgb(255 255 255 /0.6) 0) border-box,
+    conic-gradient(at left var(--_s) bottom var(--_s),
+      #0000 90deg,var(--c) 0) 0 100%/calc(100% - var(--b)) calc(100% - var(--b))  border-box;
+  clip-path: 
+    polygon(
+     var(--d) 0%, 
+     var(--d) 0%, 
+     100% 0%, 
+     100% calc(100% - var(--d)),
+     100% calc(100% - var(--d)),
+     var(--d) calc(100% - var(--d))
+    );
+  transition: 0.5s;
 }
 
 .btn-primary:hover {
-  color: #fff;
-  background-color: #1465d9;
-  border-color: #135fcd;
+  clip-path: 
+  polygon(
+   0% var(--d), 
+   var(--d) 0%, 
+   100% 0%, 
+   100% calc(100% - var(--d)), 
+   calc(100% - var(--d)) 100%, 
+   0% 100%
+ );
 }
 
 .btn-primary:focus, .btn-primary.focus {
@@ -9767,10 +9793,23 @@ h6,
   outline: none;
 }
 
-.navbar-light .navbar-nav .nav-link:hover,
-.navbar-light .navbar-nav .nav-link.active {
-  color: #ffaa00;
+.navbar-light .navbar-nav .nav-link {
+  --c: #fdbb38;
+  /* the color */
+   --s: .15em;
+   line-height:1.1em;
+   padding-bottom: calc(2.1*var(--s));
+   margin-bottom: 20px;
+   background: conic-gradient(from 135deg at top,var(--c) 90deg,#0000 0) left 0 bottom var(--s)/calc(2*var(--s)) var(--s) repeat-x, conic-gradient(from -45deg at bottom,var(--c) 90deg,#0000 0) left var(--s) bottom 0/calc(2*var(--s)) var(--s) repeat-x;
+   -webkit-mask: linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0) 0/var(--_p,0%) padding-box no-repeat;
+   transition: .5s;  
 }
+
+.navbar-light .navbar-nav .nav-link:hover{
+  --_p: 100%;
+  color: var(--c);
+}
+
 
 @media (max-width: 991.98px) {
   .navbar-light .navbar-nav .nav-link {
@@ -10010,3 +10049,156 @@ p.cursor::after {
     opacity:0;
   }
 }
+/* -----------------------------Footer Styling-------------------- */
+/*FOOTER*/
+
+a{
+  text-decoration:none;
+  outline:none !important;
+  color:#fff;
+  }
+  
+  .border-shape {
+  background: #ffbe00 none repeat scroll 0 0;
+  color: #fff;
+  display: block;
+  height: 3px;
+  left: 0;
+  margin: 20px auto;
+  position: relative;
+  right: 0;
+  text-align: center;
+  top: 0;
+  width: 80px;
+  }
+  
+  .border-shape::before {
+  background: #ffbe00 none repeat scroll 0 0;
+  bottom: 0;
+  content: "";
+  height: 1px;
+  left: 80px;
+  margin: 0 auto;
+  position: absolute;
+  text-align: center;
+  top: 1px;
+  width: 100px;
+  }
+  
+  .border-shape::after {
+  background: #ffbe00 none repeat scroll 0 0;
+  bottom: 0;
+  content: "";
+  height: 1px;
+  margin: 0 auto;
+  position: absolute;
+  right: 80px;
+  text-align: center;
+  top: 1px;
+  width: 100px;
+  }
+  
+
+footer{
+  width:100%;
+  background-color: #2D3436;
+  color:#fff;
+  }
+  
+  .top_header{
+  padding:2rem;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  position:relative;
+  }
+  
+  .top_header section{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  width:100%;
+  }
+  
+  .top_header span{
+  padding:0 1rem;
+  }
+  
+  .top_header .fa{
+  color:#FFA500;
+  font-size:35px;
+  }
+  
+  footer .border-shape {
+  width: 40%;
+  }
+  
+  footer .border-shape::before {
+  width: 100%;
+  left:120px;
+  }
+  
+  footer .border-shape::after {
+  width: 100%;
+  right:120px;
+  }
+  
+  footer .bottom_content section{
+  padding:1.5rem 2rem;
+  display:flex;
+  align-items:center;
+  justify-content:Center;
+  }
+  
+  .bottom_content a{
+  margin:0 20px;
+  color:rgba(255,255,255,0.7);
+  transition:0.5s;
+  color: #0000;
+  background: 
+    linear-gradient(90deg,#FFA500 50%,#000 0) 
+    var(--_p,100%)/200% no-repeat;
+  -webkit-background-clip: text;
+          background-clip: text;
+  }
+  
+  .bottom_content a:hover{
+  --_p: 0%;
+  }
+  
+  
+  .copyright{
+  padding:0.8em 0;
+  background-color:#1e1e1e;
+  text-align:center;
+  color:rgba(255,255,255,0.7);
+  font-size:12px;
+  }
+  
+  
+  
+  @media (max-width:820px){
+  .top_header{
+  padding:1rem;
+  display:block;
+  }
+  
+  .top_header section{
+  margin:40px 0;
+  align-items:left;
+  justify-content:left;
+  }
+  footer .bottom_content section{
+  padding:1rem;
+  display:block;
+  }
+  footer .bottom_content section a{
+  padding:1rem;
+  font-size:12px;
+  margin:0 5px;
+  display:inline-block;
+  }
+  }
+  
+  
+  
