last update done

--- a/Config/templates/Website/base.html
+++ b/Config/templates/Website/base.html
@@ -88,7 +88,7 @@
          </section>
       </div>
       <div class="copyright">
-         Copyright © 2021 Tawsifxd - All rights reserved 
+         <p> Copyright &copy; 2022-<script>document.write(new Date().getFullYear())</script> Spirit School All Rights Reserved</p>
       </div>
    </footer>
     <!-- Footer End -->
