--- a/Config/templates/includes/footer.html
+++ b/Config/templates/includes/footer.html
@@ -1,4 +1,4 @@
 {% load static %}
 <footer>
-    <p>Copyright © 2020 TawsifXD</p>
+    <p> Copyright &copy; 2022-<script>document.write(new Date().getFullYear())</script> Spirit School All Rights Reserved</p>
  </footer>
